add pull h1 html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <h1>Zmiany do pulla</h1>
         <h1>List od Mikołaja</h1>
         <h2>KUKON, Lex Clockwork</h2>
         <p>Zamknij oczy będzie lepiej zaraz wstanie słońce dla nas
