Add input html push

--- a/index.html
+++ b/index.html
@@ -70,5 +70,6 @@
             Bardzo chętnie cię odprowadzę po zmroku
             Nie bój się nas bo my nie jesteśmy jak wszyscy
             Za dwie minuty odjeżdża twój autobus</p>
+        <input type="email" placeholder="jakas tam zmiana do pusha">
     </body>
 </html>
